2011-04-12 Jim Garlick <garlick.jim@gmail.com>

	* libvxi11/vxi11_device.[ch] : Some cosmetic cleanup [Alessio Bogani].

2011-04-11 Jim Garlick <garlick.jim@gmail.com>

	* libvxi11/Makefile.am : Install vxi11.h.

	* libvxi11/vxi11_device.h : Add inline documentation.

	* libvxi11/vxi11_device.[ch] : Add vxi11_strerror [Alessio Bogani].

2011-04-10 Jim Garlick <garlick.jim@gmail.com>

	* gpib-utils.spec.in : Create -devel and -libs subpackages.

	* test/thello.c : Simple libvxi11 program for equery *IDN?
	to make sure shared library exports proper symbols.

	* libvxi11/Makefile.am : Split vxi11intr.x products out to
	libvxi11intr.a.

	* configure.ac, src/gpib.c, libvxi11/vxi11_core.[ch],
	libvxi11/vxi11_device.[ch]  : Include stdbool.h and fallback defs.
	Change some ints to bools per suggestion [Alessio Bogani].

2011-04-08 Jim Garlick <garlick.jim@gmail.com>

	* libvxi11/* : Install shared library, includes, and .pc file.

2011-04-07 Jim Garlick <garlick.jim@gmail.com>

	* src/gpib.c : Portability fix. [Alessio Bogani]

2009-03-16 Jim Garlick <garlick.jim@gmail.com>

	* : tag gpib-utils-1.5-pre2

	* src/gpib.c : Fix address parsing in gpib_init() so that
	numerically prefixed IP/hostnames are not confused with gpib addrs.

2009-03-14 Jim Garlick <garlick.jim@gmail.com>

	* : tag gpib-utils-1.5-pre1

	* src/ibquery.c : New generic instrument query utility.

	* src/gpib.[ch] : Search the following paths for config file:
	$GPIB_UTILS_CONF, ~/.gpib-utils.conf, /etc/gpib-utils.conf.

	* configure.ac : Add -Werror to CFLAGS.

	* src/*.c : Further cleanup of common args handling.

	* src/gpib.[ch] : Remove -l (local) as common arg as the early
	parsing doesn't allow it to be the last of a string of commands.
	Add -n (name) as common arg to override default instrument name
	used to look up address in config file.

	* src/dg535.c, man/dg535.1.in : Change -n (out-chan) to -N.

	* src/hp6626.c, man/hp6626.1.in : Change -n (out-chan) to -N.
